# mindgraph-python

./: README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: README.md  research_continuity.py
mindgraph/: __init__.py  client.py
tests/: test_integration.py
